Fixed bug with filters button still showing when popover active, pokemon 4 cols on mobile again

--- a/src/scss/components/_items.scss
+++ b/src/scss/components/_items.scss
@@ -1,6 +1,7 @@
 .items {
   max-width: 500px;
   margin: 0 auto;
+  padding: 2rem 1rem;
 }
 
 .item {
