--- a/src/scss/components/_pokemon-list.scss
+++ b/src/scss/components/_pokemon-list.scss
@@ -1,4 +1,4 @@
-.pokedex-container {
+.pokedex {
   padding: 2rem 0;
 }
 
@@ -8,7 +8,7 @@
   justify-content: center;
   padding: 0;
   margin: 0;
-  padding: 2rem 0;
+  padding: 1rem 0;
 }
 
 .pokemon-list li {
